# fastfetch-rs

./: .editorconfig  .gitmodules  Cargo.toml  README.md  bleur.toml  default.nix  flake.nix  readme.md  shell.nix
.github/: copilot-instructions.md
.github/workflows/: test.yml
fastfetch-cli/: Cargo.toml
fastfetch-cli/src/: main.rs
fastfetch-rs/: Cargo.toml
fastfetch-rs/src/: main.rs
libfastfetch/: Cargo.toml
libfastfetch/benches/: README.md  module_detection.rs
libfastfetch/src/: app.rs  config.rs  context.rs  error.rs  lib.rs  logo.rs  modules.rs  output.rs
libfastfetch/src/logo/: database.rs
libfastfetch/src/modules/: cpu.rs  host.rs  kernel.rs  memory.rs  mod.rs  os.rs  shell.rs  uptime.rs
libfastfetch/src/output/: color.rs  mod.rs
libfastfetch/src/platform/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
libfastfetch/src/platform/linux/: proc.rs  sys.rs
