[workspace]
members = [
  "fastfetch-cli", "libfastfetch",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ezozbek36/fastfetch-rs"
authors = ["Ezozbek Rasulov <contact@ezozbek.dev>"]
# TODO: publish after initial release
publish = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
