[workspace]
members = [
  "fastfetch-cli",
  "libfastfetch",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ezozbek36/fastfetch-rs"
authors = ["Ezozbek Rasulov <contact@ezozbek.dev>"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
