[package]
name = "fastfetch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
libfastfetch = { path = "../libfastfetch" }
anyhow = "1.0"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
